--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@nuxt/content": "1.6.1",
     "@nuxtjs/axios": "5.12.1",
+    "vue-lazyload": "1.3.3",
     "nuxt": "2.14.3",
     "nuxt-webfontloader": "1.1.0",
     "postcss": "7.0.32",
