--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,6 @@
-upload to s3:
-  image:
-    name: banst/awscli
-    entrypoint: [""]
+deploy:
+  stage: deploy
+  image: registry.gitlab.com/gitlab-org/cloud-deploy/aws-base:latest
   script:
     - aws configure set region ru-central1
     - aws --endpoint-url=https://storage.yandexcloud.net
