Update gitlab CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,4 +5,5 @@ deploy:
     - aws configure set region ru-central1
     - aws --endpoint-url=https://storage.yandexcloud.net
     - touch foo.txt
-    - aws s3 cp foo.txt s3://$S3_BUCKET/
+    - aws --endpoint-url=https://storage.yandexcloud.net \
+      s3 cp --recursive /foo.txt s3://$S3_BUCKET/
