--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,6 @@ deploy:
   stage: deploy
   image: registry.gitlab.com/gitlab-org/cloud-deploy/aws-base:latest
   script:
-    - aws configure set region ru-central1
+    - aws configure --endpoint-url=https://storage.yandexcloud.net
     - touch foo.txt
-    - aws --endpoint-url=https://storage.yandexcloud.net \
-      s3 cp --recursive /foo.txt s3://$S3_BUCKET/
+    - aws s3 cp --recursive /foo.txt s3://$S3_BUCKET/
