--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,8 +2,8 @@ deploy:
   stage: deploy
   image: registry.gitlab.com/gitlab-org/cloud-deploy/aws-base:latest
   script:
-    - aws configure aws_access_key_id $AWS_ACCESS_KEY_ID
-    - aws configure aws_secret_access_key $AWS_SECRET_ACCESS_KEY
+    - aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
+    - aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
     - aws configure --endpoint-url=https://storage.yandexcloud.net
     - touch foo.txt
     - aws s3 cp --recursive foo.txt s3://$S3_BUCKET/
