Update gitlab CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,5 @@ deploy:
     AWS_REGION: $AWS_DEFAULT_REGION
     S3_BUCKET_NAME: $S3_BUCKET
   script:
-    - aws configure --endpoint-url=https://storage.yandexcloud.net
     - touch foo.txt
-    - aws s3 cp --recursive foo.txt s3://$S3_BUCKET/
+    - aws s3 cp --endpoint-url=https://storage.yandexcloud.net --recursive foo.txt s3://$S3_BUCKET/
