--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,4 +8,5 @@ deploy:
     S3_BUCKET_NAME: $S3_BUCKET
   script:
     - touch foo.txt
-    - aws s3 cp --endpoint-url=https://storage.yandexcloud.net --recursive foo.txt s3://$S3_BUCKET/
+    - aws --endpoint-url=https://storage.yandexcloud.net \
+      s3 cp --recursive local_files/ s3://$S3_BUCKET/
