Update gitlab CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,5 +8,4 @@ deploy:
     S3_BUCKET_NAME: $S3_BUCKET
   script:
     - touch foo.txt
-    - aws --endpoint-url=https://storage.yandexcloud.net \
-      s3 cp --recursive local_files/ s3://$S3_BUCKET/
+    - aws s3 cp --endpoint-url=https://storage.yandexcloud.net --recursive local_files/ s3://$S3_BUCKET/
