--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,4 +29,4 @@ deploy:
     S3_BUCKET_NAME: $S3_BUCKET
   script:
     - touch foo.txt
-    - aws s3 cp --endpoint-url=https://storage.yandexcloud.net --recursive --include "*" ./dist s3://$S3_BUCKET/
+    - aws s3 cp --endpoint-url=http://hb.bizmrg.com --recursive --include "*" ./dist s3://$S3_BUCKET/
