--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "@nuxt/content": "1.7.0",
     "@nuxtjs/axios": "5.12.1",
-    "vue-lazyload": "1.3.3",
+    "@nuxtjs/yandex-metrika": "^1.3.0",
+    "cssnano": "4.1.10",
     "nuxt": "2.14.3",
     "nuxt-webfontloader": "1.1.0",
     "postcss": "7.0.32",
@@ -22,7 +23,7 @@
     "postcss-nested": "4.2.3",
     "postcss-preset-env": "6.7.0",
     "postcss-sorting": "5.0.1",
-    "cssnano": "4.1.10"
+    "vue-lazyload": "1.3.3"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "3.1.0",
