--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kottte",
-  "version": "1.2 .0",
+  "version": "1.2.0",
   "private": true,
   "scripts": {
     "dev": "nuxt",
@@ -13,6 +13,7 @@
   "dependencies": {
     "@nuxt/content": "1.7.0",
     "@nuxtjs/axios": "5.12.1",
+    "@nuxtjs/device": "^1.2.7",
     "@nuxtjs/yandex-metrika": "^1.3.0",
     "cssnano": "4.1.10",
     "nuxt": "2.14.3",
