--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxt/content": "1.7.0",
     "@nuxtjs/axios": "5.12.1",
     "@nuxtjs/device": "^1.2.7",
+    "@nuxtjs/google-analytics": "^2.4.0",
     "@nuxtjs/yandex-metrika": "^1.3.0",
     "cssnano": "4.1.10",
     "nuxt": "2.14.3",
