Gitlab CI notify to telegram

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,9 +36,8 @@ deploy:
     - aws s3 cp --recursive --include "*" ./dist s3://$S3_BUCKET/
     - sh .ci-notify.sh ✅
 
-
 notify_error:
-  stage: notify
+  stage: .post
   script:
     - sh .ci-notify.sh ❌
   when: on_failure #deploy fail
