--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ cache:
 
 Build:
   stage: build
-  image: node:latest
+  image: node:alpine:3.10
   script:
     - yarn install
     - yarn generate
