--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ cache:
 
 Build:
   stage: build
-  image: node:latest-alpine
+  image: node:alpine
   script:
     - yarn install
     - yarn generate
