--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nuxt": "2.14.3",
     "nuxt-webfontloader": "1.1.0",
     "postcss": "7.0.32",
+    "postcss-100vh-fix": "^0.1.1",
     "postcss-cssnext": "3.1.0",
     "postcss-loader": "3.0.0",
     "postcss-nested": "4.2.3",
