--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
     "lint": "yarn lint:js"
   },
   "dependencies": {
-    "@nuxt/content": "1.7.0",
     "@nuxtjs/axios": "5.12.1",
-    "@nuxtjs/device": "^1.2.7",
     "@nuxtjs/google-analytics": "^2.4.0",
     "@nuxtjs/yandex-metrika": "^1.3.0",
     "cssnano": "4.1.10",
@@ -25,8 +23,7 @@
     "postcss-loader": "3.0.0",
     "postcss-nested": "4.2.3",
     "postcss-preset-env": "6.7.0",
-    "postcss-sorting": "5.0.1",
-    "vue-lazyload": "1.3.3"
+    "postcss-sorting": "5.0.1"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "3.1.0",
