--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,6 +38,7 @@ deploy:
   script:
     - aws s3 rm s3://$S3_BUCKET/_nuxt/ --recursive
     - aws s3 cp --recursive --include "*" ./dist s3://$S3_BUCKET/
+    - aws cloudfront create-invalidation --distribution-id EA8P875CSV9ED --paths "/"
     - sh .ci-notify.sh ✅
 
 notify_error:
