--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   "dependencies": {
     "@nuxtjs/axios": "5.12.1",
     "@nuxtjs/google-analytics": "^2.4.0",
-    "@nuxtjs/google-gtag": "^1.0.4",
-    "@nuxtjs/yandex-metrika": "^1.3.0",
+    "@nuxtjs/gtm": "^2.3.2",
     "cssnano": "4.1.10",
     "nuxt": "2.14.3",
     "nuxt-webfontloader": "1.1.0",
