--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,12 +15,15 @@ cache:
 Build:
   stage: build
   image: node:alpine
+  before_script:
+    - apk add zip
   script:
     - yarn install
     - yarn generate
+    - zip -r dist.zip dist
   artifacts:
     paths:
-      - dist/
+      - dist.zip
     expire_in: 1 day
 
 ######################
@@ -29,16 +32,17 @@ Build:
 
 deploy:
   stage: deploy
-  image: registry.gitlab.com/gitlab-org/cloud-deploy/aws-base:latest
-  variables:
-    AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
-    AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
-    AWS_REGION: $AWS_DEFAULT_REGION
-    S3_BUCKET_NAME: $S3_BUCKET
+  image: alpine
+  before_script:
+    - apk add openssh-client
+    - eval $(ssh-agent -s)
+    - echo "$SSH_KEY" | tr -d '\r' | ssh-add -
+    - mkdir -p ~/.ssh
+    - chmod 700 ~/.ssh
   script:
-    - aws s3 rm s3://$S3_BUCKET/_nuxt/ --recursive
-    - aws s3 cp --recursive --include "*" ./dist s3://$S3_BUCKET/
-    - aws cloudfront create-invalidation --distribution-id EA8P875CSV9ED --paths "/"
+    - ssh -o StrictHostKeyChecking=no root@45.12.18.76 "rm -r /var/www/kottte"
+    - scp -o StrictHostKeyChecking=no dist.zip root@45.12.18.76:/var/www/kottte
+    - ssh -o StrictHostKeyChecking=no root@45.12.18.76 "cd /var/www/kottte/dist; unzip dist.zip"
     - sh .ci-notify.sh ✅
 
 notify_error:
