--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxtjs/google-analytics": "^2.4.0",
     "@nuxtjs/gtm": "^2.3.2",
     "cssnano": "4.1.10",
+    "gsap": "^3.5.1",
     "nuxt": "2.14.3",
     "nuxt-webfontloader": "1.1.0",
     "postcss": "7.0.32",
