--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,7 +42,7 @@ deploy:
   script:
     - ssh -o StrictHostKeyChecking=no root@45.12.18.76 "rm -r /var/www/kottte"
     - scp -o StrictHostKeyChecking=no dist.zip root@45.12.18.76:/var/www/kottte
-    - ssh -o StrictHostKeyChecking=no root@45.12.18.76 "cd /var/www/kottte/dist; unzip dist.zip"
+    - ssh -o StrictHostKeyChecking=no root@45.12.18.76 "cd /var/www/kottte; unzip dist.zip"
     - sh .ci-notify.sh ✅
 
 notify_error:
