--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,7 +32,7 @@ Build:
 
 deploy:
   stage: deploy
-  image: alpine
+  image: node:alpine
   before_script:
     - apk add openssh-client
     - eval $(ssh-agent -s)
