--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,7 +41,7 @@ deploy:
     - chmod 700 ~/.ssh
   script:
     - scp -o StrictHostKeyChecking=no dist.zip root@45.12.18.76:/var/www/kottte
-    - ssh -o StrictHostKeyChecking=no root@45.12.18.76 "cd /var/www/kottte; unzip dist.zip"
+    - ssh -o StrictHostKeyChecking=no root@45.12.18.76 "rm -rf /var/www/kottte/; cd /var/www/kottte; unzip dist.zip; rm dist.zip;"
     - sh .ci-notify.sh ✅
 
 notify_error:
