--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,6 +40,7 @@ deploy:
     - mkdir -p ~/.ssh
     - chmod 700 ~/.ssh
   script:
+    - ssh -o StrictHostKeyChecking=no root@45.12.18.76 "rm -r /var/www/kottte/*;"
     - scp -o StrictHostKeyChecking=no dist.zip root@45.12.18.76:/var/www/kottte
     - ssh -o StrictHostKeyChecking=no root@45.12.18.76 "rm -rf /var/www/kottte/; cd /var/www/kottte; unzip dist.zip; rm dist.zip;"
     - sh .ci-notify.sh ✅
